# rshutdown

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildall.sh  rpi-toolchain.cmake  set_cross_compile.sh  set_shutdown_token.sh.template
.github/workflows/: build-release.yml
packaging/: rshutdown-default  rshutdown-init  rshutdown-logrotate  rshutdown-sudoers
packaging/debian/: postinst  postrm  preinst  prerm
src/: main.c
